<resources>
    <string name="app_name">WeatherApp</string>
    <string name="api_key">58b282e877e97895e6d6ac8783345123</string>
    <string name="web_service_url">http://api.openweathermap.org/data/2.5/weather?q=</string>
    <string name="search_for_a_weather">search for a weather</string>
    <string name="current_temp">Current temp.</string>
    <string name="wind_ne">Wind: NE</string>
    <string name="sunset_ne">Sunset: NE</string>
    <string name="sunrise_ne">Sunrise: NE</string>
    <string name="cloud_ne">Clouds: NE</string>
    <string name="pressure_ne">Pressure: NE</string>
    <string name="enter_your_city">Enter your city</string>
    <string name="weather_conditions_ne">Weather conditions: NE</string>
</resources>
