<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:text="@string/search_for_a_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search"/>

    <TextView
        android:id="@+id/test"
        android:text="@string/enter_your_city"
        android:gravity="center"
        android:padding="10dp"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"/>

    <TextView
        android:id="@+id/wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wind_ne"
        android:layout_below="@id/test"/>

    <TextView
        android:id="@+id/sunset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunset_ne"
        android:layout_below="@id/wind"/>

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunrise_ne"
        android:layout_below="@id/sunset"/>

    <TextView
        android:id="@+id/cloud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cloud_ne"
        android:layout_below="@id/sunrise"/>

    <TextView
        android:id="@+id/pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pressure_ne"
        android:layout_below="@id/cloud"/>


</RelativeLayout>